@@ -1,5 +1,5 @@
 {
-  "count": 275,
+  "count": 276,
   "uniques": 20,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
